--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
 
 <body>
 
-    <header class="header__heading">
-        <h1 class="txt--title txt--center">Ohmyfood!</h1>
+    <header class="header">
+        <h1 class="header__heading txt--center">Ohmyfood!</h1>
     </header>
 
     <section class="presentation bg--gray">
 
-        <div class="presentation__localisation bg--gray--darker">
+        <div class="presentation__localisation">
             <p>
                 <i class="fas fa-map-marker-alt"></i>
                 Paris, Belleville
             </p>
         </div>
 
-        <div class="presentation__txt">
-            <h2 class="presentation__txt--heading">Réservez le menu qui vous convient</h2 <p
-                class="presentation__txt--light">Découvrez des restaurants d'exeption, séléctionnés par nos soins.</p>
+        <div class="presentation__text">
+            <h2 class="presentation__text__heading">Réservez le menu qui vous convient</h2>
+                <p class="presentation__text__description">Découvrez des restaurants d'exeption, séléctionnés par nos soins.</p>
         </div>
-        <div class="btn btn--primary btn--center btn--round">Explorer nos restaurants</div>
+        <a class="presentation__button btn">Explorer nos restaurants</a>
 
     </section>
 
@@ -46,17 +46,17 @@
         <div class="operation__steps txt--bold">
 
             <div class="step__box">
-                <div class="step__box__nb">1</div>
+                <div class="step__box__nb"><p>1</p></div>
                 <p class="step__box__logo fas fa-mobile-alt"></p>
                 <p class="step_txt"> Choisissez un restaurant</p>
             </div>
             <div class="step__box">
-                <div class="step__box__nb">2</div>
+                <div class="step__box__nb"><p>2</p></div>
                 <p class="step__box__logo fas fa-list-ul"></p>
                 <p>Composez votre menu</p>
             </div>
             <div class="step__box">
-                <div class="step__box__nb">3</div>
+                <div class="step__box__nb"><p>3</p></div>
                 <p class="step__box__logo fas fa-store"></p>
                 <p>Dégustez au restaurant</p>
             </div>
@@ -72,66 +72,69 @@
         </div>
         <div class="restaurant__list">
 
-            <div class="restaurant__card">
+            <a href="/pages_restaurants/la_palette_du_gout.html" class="restaurant__card">
                 <div class="restaurant__card__img">
                     <img src="/public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" srcset="">
                 </div>
                 <div class="restaurant__card__txt">
                     <h3 class="txt--heading">La palette du goût</h3>
-                    <p>Ménilmontant</p>
+                    <p class="description">Ménilmontant</p>
                 </div>
                 <div class="restaurant__card__fav">
-                    <i class="far fa-heart"></i>
-                    <!-- FILLED HEART <i class="fas fa-heart"></i> -->
+                    <div class="restaurant__card__fav--unchecked"><i class="far fa-heart"></i></div>
+                    <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
                 </div>
                 <div class="restaurant__card__new">
                     <p class="txt--center txt--bold">Nouveau</p>
                 </div>
-            </div>
+            </a>
 
-            <div class="restaurant__card">
+            <a href="/pages_restaurants/la_note_enchentee.html" class="restaurant__card">
                 <div class="restaurant__card__img">
                     <img src="/public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" height="250" alt="" srcset="">
                 </div>
                 <div class="restaurant__card__txt">
                     <h3 class="txt--heading">La note enchantée</h3>
-                    <p>Charonne</p>
+                    <p class="description">Charonne</p>
                 </div>
                 <div class="restaurant__card__fav">
-                    <i class="far fa-heart fav--checked"></i>
+                    <div class="restaurant__card__fav--unchecked"><i class="far fa-heart"></i></div>
+                    <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
                 </div>
                 <div class="restaurant__card__new">
                     <p class="txt--center txt--bold">Nouveau</p>
                 </div>
-            </div>
+            </a>
 
-            <div class="restaurant__card">
+            <a href="/pages_restaurants/a_la_francaise.html" class="restaurant__card">
                 <div class="restaurant__card__img">
                     <img src="/public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" srcset="">
                 </div>
                 <div class="restaurant__card__txt">
                     <h3 class="txt--heading">À la française</h3>
-                    <p>Cité Rouge</p>
+                    <p class="description">Cité Rouge</p>
                 </div>
                 <div class="restaurant__card__fav">
-                    <i class="far fa-heart"></i>
+                    <div class="restaurant__card__fav--unchecked"><i class="far fa-heart"></i></div>
+                    <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
                 </div>
-            </div>
+            </a>
 
-            <div class="restaurant__card">
+            <a href="/pages_restaurants/le_delice_des_sens.html" class="restaurant__card">
                 <div class="restaurant__card__img">
                     <img src="/public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=""
                         srcset="">
                 </div>
                 <div class="restaurant__card__txt">
                     <h3 class="txt--heading">Le délice des sens</h3>
-                    <p>Folie-Méricourt</p>
+                    <p class="description">Folie-Méricourt</p>
                 </div>
                 <div class="restaurant__card__fav">
-                    <i class="far fa-heart"></i>
+                    <div class="restaurant__card__fav--unchecked"><i class="far fa-heart"></i></div>
+                    <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
                 </div>
 
-            </div>
+            </a>
 
         </div>
     </section>
@@ -144,7 +147,7 @@
                 <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
                 <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
                 <a href="#">Mentions Légales</a>
-                <a href="#">Contact</a>
+                <a href="mailto:contact@ohmyfood.com">Contact</a>
             </div>
         </div>
     </footer>
@@ -152,4 +155,4 @@
 
 </body>
 
-</html>²
+</html>
