--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ohmyfood!</title>
+    <title>Ohmyfood! | Home</title>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
@@ -17,142 +17,163 @@
 </head>
 
 <body>
+    <div id="spinner">
+        <i class="ball--8"></i>
+        <i class="ball--7"></i>
+        <i class="ball--6"></i>
+        <i class="ball--5"></i>
+        <i class="ball--4"></i>
+        <i class="ball--3"></i>
+        <i class="ball--2"></i>
+        <i class="ball--1"></i>
+    </div>
 
-    <header class="header">
-        <h1 class="header__heading txt--center">Ohmyfood!</h1>
-    </header>
+    <div class="main blur">
+        <header class="header">
+            <h1 class="header__heading txt--center">Ohmyfood!</h1>
+        </header>
 
-    <section class="presentation bg--gray">
+        <section class="presentation txt--center bg--gray">
 
-        <div class="presentation__localisation">
-            <p>
-                <i class="fas fa-map-marker-alt"></i>
-                Paris, Belleville
-            </p>
-        </div>
+            <div class="presentation__localisation">
+                <p>
+                    <i class="fas fa-map-marker-alt"></i>
+                    Paris, Belleville
+                </p>
+            </div>
 
-        <div class="presentation__text">
-            <h2 class="presentation__text__heading">Réservez le menu qui vous convient</h2>
+            <div class="presentation__text">
+                <h2 class="presentation__text__heading">Réservez le menu qui vous convient</h2>
                 <p class="presentation__text__description">Découvrez des restaurants d'exeption, séléctionnés par nos soins.</p>
-        </div>
-        <a class="presentation__button btn">Explorer nos restaurants</a>
-
-    </section>
-
-    <section class="operation">
-        <h2 class="operation__heading">
-            Fonctionnement
-        </h2>
-        <div class="operation__steps txt--bold">
-
-            <div class="step__box">
-                <div class="step__box__nb"><p>1</p></div>
-                <p class="step__box__logo fas fa-mobile-alt"></p>
-                <p class="step_txt"> Choisissez un restaurant</p>
-            </div>
-            <div class="step__box">
-                <div class="step__box__nb"><p>2</p></div>
-                <p class="step__box__logo fas fa-list-ul"></p>
-                <p>Composez votre menu</p>
-            </div>
-            <div class="step__box">
-                <div class="step__box__nb"><p>3</p></div>
-                <p class="step__box__logo fas fa-store"></p>
-                <p>Dégustez au restaurant</p>
             </div>
 
-        </div>
+            <a class="btn--primary">Explorer nos restaurants</a>
 
+        </section>
 
-    </section>
+        <section class="operation">
+            <h2 class="operation__heading">
+                Fonctionnement
+            </h2>
+            <div class="operation__steps txt--bold">
 
-    <section class="restaurant bg--gray">
-        <div class="restaurant__heading">
-            <h2>Restaurants</h2>
-        </div>
-        <div class="restaurant__list">
-
-            <a href="/pages_restaurants/la_palette_du_gout.html" class="restaurant__card">
-                <div class="restaurant__card__img">
-                    <img src="/public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" srcset="">
+                <div class="step__box">
+                    <div class="step__box__nb">
+                        <p>1</p>
+                    </div>
+                    <p class="fas fa-mobile-alt"></p>
+                    <p class="step_txt"> Choisissez un restaurant</p>
                 </div>
-                <div class="restaurant__card__txt">
-                    <h3 class="txt--heading">La palette du goût</h3>
-                    <p class="description">Ménilmontant</p>
+                <div class="step__box">
+                    <div class="step__box__nb">
+                        <p>2</p>
+                    </div>
+                    <p class="fas fa-list-ul"></p>
+                    <p>Composez votre menu</p>
                 </div>
-                <div class="restaurant__card__fav">
-                    <div class="restaurant__card__fav--unchecked"><i class="far fa-heart"></i></div>
-                    <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
-                </div>
-                <div class="restaurant__card__new">
-                    <p class="txt--center txt--bold">Nouveau</p>
-                </div>
-            </a>
-
-            <a href="/pages_restaurants/la_note_enchentee.html" class="restaurant__card">
-                <div class="restaurant__card__img">
-                    <img src="/public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" height="250" alt="" srcset="">
-                </div>
-                <div class="restaurant__card__txt">
-                    <h3 class="txt--heading">La note enchantée</h3>
-                    <p class="description">Charonne</p>
-                </div>
-                <div class="restaurant__card__fav">
-                    <div class="restaurant__card__fav--unchecked"><i class="far fa-heart"></i></div>
-                    <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
-                </div>
-                <div class="restaurant__card__new">
-                    <p class="txt--center txt--bold">Nouveau</p>
-                </div>
-            </a>
-
-            <a href="/pages_restaurants/a_la_francaise.html" class="restaurant__card">
-                <div class="restaurant__card__img">
-                    <img src="/public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" srcset="">
-                </div>
-                <div class="restaurant__card__txt">
-                    <h3 class="txt--heading">À la française</h3>
-                    <p class="description">Cité Rouge</p>
-                </div>
-                <div class="restaurant__card__fav">
-                    <div class="restaurant__card__fav--unchecked"><i class="far fa-heart"></i></div>
-                    <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
-                </div>
-            </a>
-
-            <a href="/pages_restaurants/le_delice_des_sens.html" class="restaurant__card">
-                <div class="restaurant__card__img">
-                    <img src="/public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=""
-                        srcset="">
-                </div>
-                <div class="restaurant__card__txt">
-                    <h3 class="txt--heading">Le délice des sens</h3>
-                    <p class="description">Folie-Méricourt</p>
-                </div>
-                <div class="restaurant__card__fav">
-                    <div class="restaurant__card__fav--unchecked"><i class="far fa-heart"></i></div>
-                    <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
+                <div class="step__box">
+                    <div class="step__box__nb">
+                        <p>3</p>
+                    </div>
+                    <p class="fas fa-store"></p>
+                    <p>Dégustez au restaurant</p>
                 </div>
 
-            </a>
-
-        </div>
-    </section>
-    <footer>
-        <div class="footer bg--dark">
-            <div class="footer__heading">
-                <p class="txt--title">OhmyFood</p>
             </div>
-            <div class="footer__txt">
-                <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
-                <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
-                <a href="#">Mentions Légales</a>
-                <a href="mailto:contact@ohmyfood.com">Contact</a>
+
+
+        </section>
+
+        <section class="restaurant bg--gray">
+            <div class="restaurant__heading">
+                <h2>Restaurants</h2>
             </div>
-        </div>
-    </footer>
 
+            <div class="restaurant__list">
 
+                <div class="restaurant__list__row">
+                    <a href="/pages_restaurants/la_palette_du_gout.html" class="restaurant__card">
+                        <div class="restaurant__card__img">
+                            <img src="/public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Illustration du restaurant : La palette du goût (Ménilmontant)">
+                        </div>
+                        <div class="restaurant__card__txt">
+                            <h3 class="txt--heading">La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <div class="restaurant__card__fav">
+                            <div class="restaurant__card__fav--unchecked"><i class="far fa-heart"></i></div>
+                            <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
+                        </div>
+                        <div class="restaurant__card__new">
+                            <p class="txt--center txt--bold">Nouveau</p>
+                        </div>
+                    </a>
+                    <a href="/pages_restaurants/la_note_enchentee.html" class="restaurant__card">
+                        <div class="restaurant__card__img">
+                            <img src="/public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" height="250" alt="Illustration du restaurant : La note enchantée (Charonne)">
+                        </div>
+                        <div class="restaurant__card__txt">
+                            <h3 class="txt--heading">La note enchantée</h3>
+                            <p>Charonne</p>
+                        </div>
+                        <div class="restaurant__card__fav">
+                            <div class="restaurant__card__fav--unchecked"><i class="far fa-heart"></i></div>
+                            <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
+                        </div>
+                        <div class="restaurant__card__new">
+                            <p class="txt--center txt--bold">Nouveau</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="restaurant__list__row">
+                    <a href="/pages_restaurants/a_la_francaise.html" class="restaurant__card">
+                        <div class="restaurant__card__img">
+                            <img src="/public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Illustration du restaurant : À la française (Cité Rouge)">
+                        </div>
+                        <div class="restaurant__card__txt">
+                            <h3 class="txt--heading">À la française</h3>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <div class="restaurant__card__fav">
+                            <div class="restaurant__card__fav--unchecked"><i class="far fa-heart"></i></div>
+                            <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
+                        </div>
+                    </a>
+                    <a href="/pages_restaurants/le_delice_des_sens.html" class="restaurant__card">
+                        <div class="restaurant__card__img">
+                            <img src="/public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Illustration du restaurant : Le délice des sens (Folie-Méricourt)">
+                        </div>
+                        <div class="restaurant__card__txt">
+                            <h3 class="txt--heading">Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                        <div class="restaurant__card__fav">
+                            <div class="restaurant__card__fav--unchecked"><i class="far fa-heart"></i></div>
+                            <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
+                        </div>
+                    </a>
+                </div>
+
+            </div>
+
+        </section>
+
+        <footer>
+            <div class="footer bg--dark">
+                <ul>
+                    <li>
+                        <p class="footer__heading txt--title">OhmyFood</p>
+                    </li>
+                    <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+                    <li><a href="#">Mentions Légales</a></li>
+                    <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+                </ul>
+            </div>
+        </footer>
+
+    </div>
 </body>
 
 </html>
