fix path for images and css

--- a/index.html
+++ b/index.html
@@ -5,15 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood! | Home</title>
-
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
-    </style>
-
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d0481fe509.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 
 <body>
@@ -92,9 +87,9 @@
             <div class="restaurant__list">
 
                 <div class="restaurant__list__row">
-                    <a href="/pages_restaurants/la_palette_du_gout.html" class="restaurant__card">
+                    <a href="pages_restaurants/la_palette_du_gout.html" class="restaurant__card">
                         <div class="restaurant__card__img">
-                            <img src="/public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Illustration du restaurant : La palette du goût (Ménilmontant)">
+                            <img src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Illustration du restaurant : La palette du goût (Ménilmontant)">
                         </div>
                         <div class="restaurant__card__txt">
                             <h3 class="txt--heading">La palette du goût</h3>
@@ -108,9 +103,9 @@
                             <p class="txt--center txt--bold">Nouveau</p>
                         </div>
                     </a>
-                    <a href="/pages_restaurants/la_note_enchentee.html" class="restaurant__card">
+                    <a href="pages_restaurants/la_note_enchentee.html" class="restaurant__card">
                         <div class="restaurant__card__img">
-                            <img src="/public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" height="250" alt="Illustration du restaurant : La note enchantée (Charonne)">
+                            <img src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" height="250" alt="Illustration du restaurant : La note enchantée (Charonne)">
                         </div>
                         <div class="restaurant__card__txt">
                             <h3 class="txt--heading">La note enchantée</h3>
@@ -127,9 +122,9 @@
                 </div>
 
                 <div class="restaurant__list__row">
-                    <a href="/pages_restaurants/a_la_francaise.html" class="restaurant__card">
+                    <a href="pages_restaurants/a_la_francaise.html" class="restaurant__card">
                         <div class="restaurant__card__img">
-                            <img src="/public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Illustration du restaurant : À la française (Cité Rouge)">
+                            <img src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Illustration du restaurant : À la française (Cité Rouge)">
                         </div>
                         <div class="restaurant__card__txt">
                             <h3 class="txt--heading">À la française</h3>
@@ -140,9 +135,9 @@
                             <div class="restaurant__card__fav--checked"><i class="fas fa-heart"></i></div>
                         </div>
                     </a>
-                    <a href="/pages_restaurants/le_delice_des_sens.html" class="restaurant__card">
+                    <a href="pages_restaurants/le_delice_des_sens.html" class="restaurant__card">
                         <div class="restaurant__card__img">
-                            <img src="/public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Illustration du restaurant : Le délice des sens (Folie-Méricourt)">
+                            <img src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Illustration du restaurant : Le délice des sens (Folie-Méricourt)">
                         </div>
                         <div class="restaurant__card__txt">
                             <h3 class="txt--heading">Le délice des sens</h3>
