--- a/pages_restaurants/le_delice_des_sens.html
+++ b/pages_restaurants/le_delice_des_sens.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d0481fe509.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         </header>
 
         <div class="restaurant__img">
-            <img src="/public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Illustration du restaurant 'Le délice des sens'">
+            <img src="../public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Illustration du restaurant 'Le délice des sens'">
         </div>
 
         <section class="menu">
